v6.2
-----
+ Rewrote custom profile background selection dialog
+ Added support for Humble Widgets in price comparisons
: Fixed a bug where Legend of Grimrock store page could inadvertently show incorrect DRM warnings
: Fixed a bug with account total not being correct for Russian currencies


v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Store pages now display a full size background
+ Added back links in the header (Forums, Games, Reviews)
+ Selecting booster packs in your inventory now shows the average price of three cards for that game
+ Added option to only search within product names
+ Added inventory marketplace support for Battleblock Theater items
+ Added a loading dialog to custom profile background selection
: Fixed a bug that caused price comparison overlays to be partially hidden in some circumstances
: Fixed a bug that sometimes caused purchase date to be incorrect after buying the game as a gift
: Fixed a bug which would cause CS:GO items not to get market data in non-English languages

v6.0.1
-----
+ Added profile links to private profiles
+ Gift transactions are now listed separately in account totals
: Fixed a bug that caused inventory pages to not always show price history

v6.0
-----
+ Added warning if browsing in a language other than your preferred language (set in options)
+ Added ability to add a custom amount to your Steam wallet
: Fixed a bug that caused highlighting not to work correctly if DOM storage was disabled
: Fixed a bug that caused emptying your shopping cart to break purchase process
: Fixed a bug that caused you to not be able to have more than one item in your cart at once
: Fixed a bug on badge pages that showed incorrect market links
: Fixed a bug that caused the market page to format incorrectly
: Fixed a bug in some languages where badge filtering didn't work properly

v5.9.1
-----
: Updated code according to Mozilla's requests
- Removed header link insertion