@@ -4,6 +4,7 @@ v6.2
 + Added support for Humble Widgets in price comparisons
 : Fixed a bug where Legend of Grimrock store page could inadvertently show incorrect DRM warnings
 : Fixed a bug with account total not being correct for Russian currencies
+- Removed achievement section on app pages, as this was re-implemented by Valve
 
 
 v6.1
